* Clearhaus: use $0 for verify transactions [bpollack] #2964
* Global Collect: properly handle partial captures [bpollack] #2967
* Braintree: Add support for GooglePay [dtykocki] [#2966]
* Adyen: allow overriding card brands [bpollack] #2968
* Adyen: allow custom routing [bpollack] #2969
* First Pay: Adds scrubbing [deedeelavinder] #2972

== Version 1.81.0 (July 30, 2018)
* GlobalCollect: Don't overwrite contactDetails [curiousepic] #2915
* Pin Payments: Pass reference for statement desc [curiousepic] #2919
* FirstData: introduce v27 gateway [shasum] #2912
* Stripe: Fix contactless magstripe support [abhiin1947] #2917
* ANET: Expose full response code [curiousepic] #2924
* Global Collect: Fix customer data field structure [curiousepic] #2929
* Adyen: Set Default Name for Apple Pay Transactions [nfarve] #2930
* Beanstream: Update to use api key with login credentials [nfarve] #2934
* CT Payments: Fix a typo in the live URL scheme [bpollack] #2936
* CyberSource: Don't throw exceptions on HTML responses [bpollack] #2937
* CyberSource: Remove extraneous parameter blocking echecks [chriscz] #2861
* FirstPay: Update Fields For Recurring Payments [nfarve] #2940
* Remove unused handle_response method [bl] #2309
* Barclaycard Smartpay: bump API version to v30 [bpollack] #2941
* Safecharge: Remove duplicate supported country [curiousepic]
* Payflow Express: Use SHIPTONAME instead of `full_name` for shipping address [filipebarcos] #2945

== Version 1.80.0 (July 4, 2018)
* Default SSL min_version to TLS 1.1 to comply with June 30 PCI DSS deadline [bdewater] #2909
* Paymentez: return a Result object even when the upstream server 500s [bpollack] #2871
* Drop support for Ruby versions older than 2.3 [bpollack] #2863
* Bridge Pay: don't throw an exception when bank account type is omitted [bpollack] #2873
* Avoid making actual connections in Blue Snap and Mundipagg unit tests [bpollack] #2875
* Avoid making actual connections in the connection unit tests [bpollack] #2876